# Kagami

./: .gitignore  .mcp.json  =0.18.0  CLAUDE.md  CLAUDE_AI_LOGIN.md  CLAUDE_CODE_WEB.md  PLAYWRIGHT_FIREFOX_HOME.md  README.md  add_issue_comment.py  claude_ai_page.html  claude_code_page.html  claude_code_page_success.html  claude_direct_login.html  claude_login_email_form.html  claude_login_page.html  claude_login_v2.html  claude_longer_wait.html  claude_minimal_cookies.html  claude_sessionkey_only.html  claude_stealth.html  claude_undetected.html  claude_with_cookies.html  monitor_issues.py  playwright_setup_summary.md  pyproject.toml  requirements.txt  setup_firefox_ca_cert.sh  test_mcp_tools.py  test_playwright.py  verify_firefox_setup.sh
.claude/: claude_code_web_setup.sh  settings.json
.mcp/: playwright-config.json  playwright-firefox-config.json  start_playwright_mcp_firefox.py
investigation/: SUMMARY.md
playwright_mcp_claude_code_web/: CURRENT_STATUS.md  README.md  example.py  example_debug.py  get_yahoo_news.py  mcp.py  playwright-firefox-config.json  setup.sh  setup_mcp.py  setup_minimal.py  start_playwright_mcp.py  test_mcp_setup.py  test_setup.py
playwright_setup/: QUICKSTART.md  README.md  TROUBLESHOOTING.md  proxy_manager.py  setup_playwright.py
scripts/: access_claude_code.py  create_issues.py  create_or_update_pr.py  get_pr_info.py  login_claude.py  update_issue_7.py
src/: claude_cookie_manager.py  claude_login.py  jwt_proxy_plugin.py  local_proxy.py  local_proxy_http2.py  local_proxy_proxypy.py  simple_proxypy.py
utilities/: README.md  (+2 more)
(+153 files in other folders)
