[project]
name = "kagami"
version = "0.1.0"
description = "Playwright MCP server for Claude Code Web with JWT proxy support"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.56.0",
    "proxy.py>=2.4.0", # HTTP/2対応のプロキシライブラリ
    "httpx[http2]>=0.27.0", # HTTP/2クライアント（h2パッケージ込み）
    "mcp>=1.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
dev-dependencies = []

# スクリプトベースのプロジェクトなので、ビルドバックエンドは不要
